--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -497,18 +497,14 @@ fr:
       marketplace_currency_used: "Cette place de marché utilise %{currency} comme devise. Pour changer la devise, %{contact_support_link}."
       contact_support_link_text: "contactez le support Sharetribe"
       integration_info_text: "Le système de paiement de Sharetribe est propulsé par PayPal. Pour permettre à vos utilisateurs de réaliser des paiements au sein de votre place de marché, vous devez connecter votre compte PayPal. Une fois connecté, vous pourrez choisir un montant minimal pour les transactions et éventuellement vos frais de service."
-      paypal_account_email: "1. Connecter votre compte PayPal"
       link_paypal_personal_account_label: "Proposez-vous vous aussi vos produits ou services ?"
-      paypal_account_email_completed: "Terminé !"
       link_paypal_personal_account: "Dans ce cas, vous devez également connecter votre compte PayPal depuis %{personal_payment_preferences_link}."
       personal_payment_preferences_link_text: "votre compte personnel"
-      set_minimum_price_and_fee_completed: "Terminé !"
       read_more_about_paypal: "En savoir plus sur le système de paiement avec Sharetribe."
       set_minimum_price_and_fee: "Définir un montant minimum et les frais de service"
       minimum_listing_price_label: "Montant minimal de transaction : "
       transaction_fee_label: "Frais de service : "
       minimum_transaction_fee_label: "Frais minimaux de transaction : "
-      note_about_transaction_fee: "Note : les frais de service incluent les frais PayPal qui dépendent de la monnaie et du volume des ventes du vendeur. Pour cette raison, les frais de service sont d'au minimum %{min_paypal_commission}. Lorsque les frais de service sont facturés au vendeur, PayPal prélève d'abord ses frais puis le restant est viré sur votre propre compte PayPal."
       save_settings: "Sauvegarder les paramètres"
       minimum_listing_price_below_tx_fee: "Le montant minimal de transaction doit être au moins égal aux frais minimaux de transaction %{minimum_transaction_fee}."
       minimum_listing_price_below_min: "Le montant minimal de transaction doit être supérieur aux frais de service minimaux %{minimum_commission}."
@@ -1768,7 +1764,7 @@ fr:
       paypal_info_link_text: "les frais de transaction PayPal"
       billing_agreement_description: "Autoriser %{service_name} à prélever des frais de service."
       billing_agreement: Autoriser
-      permissions_not_granted: "La connexion de votre compte PayPal n'a pas été autorisée."
+      permissions_not_granted: "Les autorisations pour se connecter à votre compte PayPal n'ont pas été permises."
       could_not_fetch_redirect_url: "L'url de redirection n'a pas pu être récupérée pour vous connecter à PayPal"
       paypal_not_enabled: "Les paiements PayPal ne sont pas activés."
       billing_agreement_canceled: "L'accord de facturation a été annulé"
