--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -470,18 +470,14 @@ it:
       marketplace_currency_used: "Questo marketplace usa %{currency} come propria valuta. Per cambiare valuta %{contact_support_link}."
       contact_support_link_text: "Contatta il supporto di Sharetribe"
       integration_info_text: "Il sistema di pagamento di %{service_name} è gestito da PayPal. Se vuoi consentire ai tuoi utenti di effettuare pagamenti sulla tua piattaforma, è necessario collegare il tuo conto PayPal e decidere il prezzo minimo del tuo spazio e la quota che vuoi trattenere per ogni transazione."
-      paypal_account_email: "1. Collega il tuo conto PayPal"
       link_paypal_personal_account_label: "Stai offrendo tu stesso prodotti o servizi?"
-      paypal_account_email_completed: Completato!
       link_paypal_personal_account: "Se è così, sarà quindi necessario collegare il conto PayPal a %{personal_payment_preferences_link}."
       personal_payment_preferences_link_text: "Il tuo account personale della piattaforma di marketplace"
-      set_minimum_price_and_fee_completed: Completato!
       read_more_about_paypal: "Maggiori informazioni sul sistema di pagamenti di Sharetribe"
-      set_minimum_price_and_fee: "2. Inserisci un prezzo minimo e una tariffa di transazione"
+      set_minimum_price_and_fee: "Inserisci un prezzo minimo e una tariffa di transazione"
       minimum_listing_price_label: "Prezzo minimo consentito:"
       transaction_fee_label: "Tariffa di transazione:"
       minimum_transaction_fee_label: "Commissione minima sulle transazioni"
-      note_about_transaction_fee: "Nota: la commissione di intermediazione sulle transazioni include la percentuale trattenuta da PayPal, che dipende dalla valuta e dal volume delle vendite del venditore. Per questo motivo, la commissione di intermediazione  è sempre almeno %{min_paypal_commission}. Quando la quota viene imposta da parte del venditore, PayPal detrarrà prima le sue spese, e il resto sarà trasferito al tuo conto PayPal."
       save_settings: "Salva le impostazioni"
       minimum_listing_price_below_tx_fee: "Il prezzo minimo deve essere maggiore o uguale al valore mino imposto dalla piattaforma: %{minimum_transaction_fee}."
       minimum_listing_price_below_min: "Il prezzo minimo deve essere maggiore o uguale al valore mino imposto dalla piattaforma: %{minimum_commission}."
