--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -497,18 +497,14 @@ nb:
       marketplace_currency_used: "Denne markedsplassen bruker %{currency} som valuta. For å endre valuta, %{contact_support_link}."
       contact_support_link_text: "kontakt Sharetribes support"
       integration_info_text: "Betalingssystemet i Sharetribe er laget av PayPal. Hvis du vil gjøre det mulig for brukere å ta betalt i din markedsplass må du koble til din PayPal-konto og velge minimumsstørrelse på transaksjonene samt din tjenestekostnad for hver transaksjon."
-      paypal_account_email: "Koble til din PayPal konto"
       link_paypal_personal_account_label: "Selger du selv produkter eller tjenester?"
-      paypal_account_email_completed: fullført!
       link_paypal_personal_account: "I så tilfelle må du koble din PayPal-konto til %{personal_payment_preferences_link}."
       personal_payment_preferences_link_text: "din personlige markedsplass-konto"
-      set_minimum_price_and_fee_completed: fullført!
       read_more_about_paypal: "Les mer om Sharetribe`s betalingssystem"
-      set_minimum_price_and_fee: "2. Sett minimums pris & transaksjonsgebyr"
+      set_minimum_price_and_fee: "Sett minimums pris & transaksjonsgebyr"
       minimum_listing_price_label: "Minimum transaksjonsstørrelse:"
       transaction_fee_label: "Transaksjonskostnad:"
       minimum_transaction_fee_label: "Minimum transaksjonskostnad:"
-      note_about_transaction_fee: "Transaksjonskostnad inkluderer PayPal-kostnad som varierer fra valuta til valuta og ditt salgsvolum. Derfor vil kostnaden alltid være minst %{min_paypal_commission}. Når kostnaden er trukket fra selger vil PayPal ta sin provisjon først og resten vil bli flyttet til din PayPal-konto."
       save_settings: "Lagre innstillinger"
       minimum_listing_price_below_tx_fee: "må være minst det samme som minimum transaksjonskostnad %{minimum_transaction_fee}."
       minimum_listing_price_below_min: "må være mer enn minimum transaksjonsprovisjon %{minimum_commission}."
