--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -497,18 +497,14 @@ pt-BR:
       marketplace_currency_used: "Este mercado usa %{currency} como moeda. Para mudar a moeda, %{contact_support_link}."
       contact_support_link_text: "Entre em contato com o suporte da Sharetribe"
       integration_info_text: "O sistema de pagamento de Sharetribe é gerenciado pelo PayPal. Se você quiser permitir que os seus usuários façam pagamentos através de seu mercado virtual, você deve se conectar a sua conta PayPal e decidir o tamanho mínimo da transação e a taxa que você quer ganhar de cada transação."
-      paypal_account_email: "1. Conecte sua conta PayPal"
       link_paypal_personal_account_label: "Você também vende produtos?"
-      paypal_account_email_completed: Concluído!
       link_paypal_personal_account: "Se vender, você precisa conectar sua conta PayPal a %{personal_payment_preferences_link}."
       personal_payment_preferences_link_text: "Sua conta pessoal no mercado"
-      set_minimum_price_and_fee_completed: Concluído!
       read_more_about_paypal: "Leia mais sobre o sistema de pagamento do Sharetribe"
-      set_minimum_price_and_fee: "2. Definir preço mínimo e taxa de transação"
+      set_minimum_price_and_fee: "Definir preço mínimo e taxa de transação"
       minimum_listing_price_label: "Preço mínimo de anúncio:"
       transaction_fee_label: "Taxa de transação:"
       minimum_transaction_fee_label: "Taxa mínima de transação:"
-      note_about_transaction_fee: "Nota: a taxa de transação inclui taxas do PayPal que dependem de sua moeda e o volume de vendas do vendedor. Por esta razão, a taxa é sempre pelo menos %{min_paypal_commission}. Quando a taxa é cobrada do vendedor, o PayPal cobrará as suas taxas em primeiro lugar, e o restante será transferido para sua conta PayPal."
       save_settings: "Salvar definições"
       minimum_listing_price_below_tx_fee: "tem que ser, pelo menos, o mesmo que a taxa de transação mínima de %{minimum_transaction_fee}."
       minimum_listing_price_below_min: "tem de ser maior do que o mínimo de comissão que é %{minimum_commission}."
