--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -39,7 +39,7 @@ de:
         unconfirmed: unbestätigt
         locked: gesperrt
       update_needs_confirmation: "Du hast Dein Konto erfolgreich aktualisiert, jedoch müssen wir noch Deine neue E-Mail-Adresse verifizieren. Bitte überprüfe Deine E-Mails und klicke auf den Bestätigungs-Link, um Deine neue E-Mail-Adresse zu bestätigen."
-      signed_up: "Herzlich willkommen! Du hast dich erfolgreich angemeldet."
+      signed_up: "Herzlich willkommen! Du hast dich erfolgreich registriert."
       updated: "Du hast dein Konto erfolgreich aktualisiert."
       destroyed: "Tschüss! Dein Konto wurde erfolgreich gelöscht. Wir hoffen, dich bald wiederzusehen."
     unlocks:
