--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -863,8 +863,8 @@ es-ES:
     confirmation_instructions:
       confirmation_instructions_signature: "Saludos cordiales,<br/>El Equipo de %{service_name}"
       welcome_to_kassi: "Bienvenido a %{service_name}!"
-      need_to_confirm: "Antes de empezar a utilizar %{service_name}, deberás confirmar tu dirección de correo electrónico con el siguiente link:"
-      confirmation_link_text: "Confirmar mi cuenta"
+      need_to_confirm: "Debes confirmar tu cuenta de correo electrónico."
+      confirmation_link_text: "Confirmar mi dirección de correo electrónico"
       or_paste_link: "Si no funciona, puedes copiar el siguiente enlace y pegarlo directamente en la barra de tu navegador web."
       turning_on_confirmations_in_this_community: "Comenzamos a utilizar e-mails de confirmación en la comunidad %{service_name}."
     common:
@@ -1295,7 +1295,7 @@ es-ES:
       community_joined_succesfully_you_still_need_to_confirm_your_email: "Ahora eres parte de esta comunidad. A continuación necesitas confirmar tu dirección e-mail."
       comment_cannot_be_empty: "El comentario no puede estar vacío."
       comment_sent: "Comentario enviado"
-      confirmation_link_is_wrong_or_used: "El link de confirmación ya ha sido usado o se ha roto en el enlace. Intenta iniciar sesión o escríbenos si el problema persiste."
+      confirmation_link_is_wrong_or_used: "El link de confirmación ya ha sido usado o se ha roto el enlace. Intenta iniciar sesión o contáctanos si el problema persiste."
       additional_email_confirmed: "El email que introdujiste ya está confirmado."
       could_not_get_email_from_facebook: "No pudimos acceder a tu dirección de email en Facebook. Sin una dirección de correo electrónico válida no podemos crearte una cuenta en nuestro servicio."
       facebook_email_unconfirmed: ~
@@ -1360,7 +1360,7 @@ es-ES:
       request_canceled: "Solicitud cancelada"
       message_sent: "Mensaje enviado"
       message_not_sent: "El mensaje no pudo ser enviado. Por favor intenta nuevamente."
-      this_content_is_not_available_in_this_community: "Este contenido no está disponible en esta comunidad."
+      this_content_is_not_available_in_this_community: "Este contenido no está disponible."
       unknown_error: "Error desconocido. Por favor utiliza el link de sugerencias para darnos detalles de lo sucedido."
       update_error: "Un error ha ocurrido mientras se actualizaba la información, por favor inténtalo de nuevo."
       you_are_not_allowed_to_give_feedback_on_this_transaction: "No estás autorizado para dar sugerencias en este evento."
@@ -1390,7 +1390,7 @@ es-ES:
       you_must_log_in_to_change_payment_settings: "Debes entrar en %{service_name} para modificar la configuración de tus pagos"
       you_must_log_in_to_accept_or_reject: "Debes entrar en tu cuenta para aceptar o rechazar la transacción"
       you_must_log_in_to_confirm_or_cancel: "Debes entrar en tu cuenta para cancelar o confirmar la transacción"
-      you_need_to_confirm_your_account_first: "Deberás confirmar tu cuenta primero."
+      you_need_to_confirm_your_account_first: "Debes confirmar tu correo electrónico primero."
       you_must_fill_all_the_fields: "Debes completar todos los campos"
       you_unfollowed_listing: "Ya no estás siguiendo este anuncio"
       joining_community_failed: "Error al unirte a esta comunidad"
@@ -1818,7 +1818,7 @@ es-ES:
       create_new_account: "Crear una cuenta"
       email: "Dirección de correo electrónico:"
       email_is_in_use: "El mail ingresado ya se encuentra registrado."
-      email_is_in_use_or_not_allowed: "El e-mail ingresado no está autorizado para entrar a esta comunidad o ya está siendo utilizado. Por favor usa una dirección de correo electrónico que esté asociada con esta comunidad (ver instrucciones más arriba). Si todavía tienes problemas para ingresar, envíanos un comentario usando el link de \"Feedback\" a la izquierda."
+      email_is_in_use_or_not_allowed: "El e-mail ingresado no está autorizado para entrar a esta comunidad o ya está siendo utilizado. Si no puedes ingresar a esta comunidad, por favor contáctanos."
       email_not_allowed: "Este e-mail no esta habilitado para esta comunidad. Por favor usa una dirección que esté asociada con esta comunidad. Si todavía no puedes ingresar, envíanos un comentario haciendo clic en el botón de la izquierda."
       email_restriction_instructions:
         one: "Esta comunidad es sólo para %{community_name}. Para unirte necesitas una dirección de email %{allowed_emails}."
@@ -2027,7 +2027,7 @@ es-ES:
       terms_have_changed: "Los términos de uso han cambiado"
       you_can_view_the_new_terms: "Puedes ver los nuevos términos"
       you_need_to_accept: "Bienvenido a %{service_name}! Al parecer es la primera vez que utilizas el servicio. Antes de comenzar primero debes aceptar los"
-      you_need_to_accept_new_terms: "Los términos de uso de %{service_name} han cambiado. Es necesario que aceptes los nuevos términos para poder continuar utilizando %{service_name}."
+      you_need_to_accept_new_terms: "Los términos de uso de %{service_name} han cambiado. Es necesario que aceptes los nuevos términos para poder continuar utilizando %{service_name}. Los nuevos términos son necesarios para mantener el servicio después de que el proyecto de investigación ha terminado."
   testimonials:
     index:
       all_testimonials: "Todas las sugerencias"
@@ -2038,12 +2038,12 @@ es-ES:
       as_expected: "Lo esperado"
       exceeded_expectations: "Mucho mejor de lo esperado"
       give_feedback_to: "Da una sugerencia a %{person}"
-      grade: "Evaluación del rendimiento"
+      grade: "Cuál es tu evaluación general?"
       less_than_expected: "Peor de lo esperado"
       send_feedback: "Enviar sugerencia"
       slightly_better_than_expected: "Un poco mejor de lo esperado"
       slightly_less_than_expected: "Un poco peor de lo esperado"
-      textual_feedback: "Sugerencia textual"
+      textual_feedback: "Danos tu sugerencia textual"
       this_will_be_shown_in_profile: "El feedback que tú des será visible para los otros usuarios en la página del perfil de %{person}. Esto ayudará a los otros miembros de esta tribu para evaluar si %{person} es una persona confiable."
       positive: Positivo
       negative: Negativo
@@ -2113,17 +2113,17 @@ es-ES:
       shorter: "%e %b a las %H:%M"
       short_date: "%e %b  %Y"
   timestamps:
-    day_ago: "un día atrás"
+    day_ago: "%{count} día atrás"
     days_ago: "%{count} días atrás"
-    hour_ago: "una hora atrás"
-    hours_ago: "%{count} horas atrás"
-    minute_ago: "un minuto atrás"
-    minutes_ago: "%{count} minutos atrás"
-    month_ago: "un mes atrás"
-    months_ago: "%{count} meses atrás"
+    hour_ago: "hace %{count} hora"
+    hours_ago: "hace %{count} horas"
+    minute_ago: "hace %{count} minuto"
+    minutes_ago: "hace %{count} minutos"
+    month_ago: "hace %{count} mes"
+    months_ago: "hace %{count} meses"
     seconds_ago: "hace %{count} segundos"
-    year_ago: "un año atrás"
-    years_ago: "%{count} años atrás"
+    year_ago: "%{count} año atrás"
+    years_ago: "hace %{count} años"
     days_since:
       one: "%{count} día"
       other: "%{count} días"
