--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -1953,7 +1953,7 @@ zh-HK:
       given_name: 名
       first_name_with_initial: ~
       first_name_only: ~
-      location_description: 您可以選擇提供你的準確地址，或只提供您的郵政編號。請至少提供您的郵政編號。您也可以通過以下地圖選擇一個地點。
+      location_description: 您可以選擇提供你的確實地址，或只提供您的郵政編號。請至少提供您的郵政編號。您也可以通過以下地圖選擇一個地點。
       phone_number: 電話號碼
       profile_picture: ~
       postal_code: 郵遞區號
