Corrected a few text errors and typos in EN onbarding wizard

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -60,7 +60,7 @@ en:
               disable_payments_link: "this article"
               disable_payments_alt: "How to disable payments or add free listings to your marketplace"
           slogan_and_description:
-            title: "Step 2: Slogan & Description"
+            title: "Step 2: Add a Slogan & Description"
             description: "The slogan & description help new visitors understand what your marketplace is about. They are the first thing your users notice when they enter your site, so try to make them descriptive but succinct."
             info_image_alt: "A screenshot of homepage showing slogan and description."
             add_your_own: "Add slogan & description"
@@ -109,7 +109,7 @@ en:
       popup:
         slogan_and_description:
           title: "Woohoo, task completed!"
-          body: "Fantastic! Up next: the slogan and description are the best way to tell new visitors understand what your marketplace is about."
+          body: "Fantastic! Up next: the slogan and description are the best way to tell new visitors what your marketplace is about."
           button: "Write your own!"
         cover_photo:
           title: "Woohoo, task completed!"
@@ -121,7 +121,7 @@ en:
           button: "Add fields & filters"
         paypal:
           title: "Well done! "
-          body: "Next, set up your marketplace for online payments! To allow your providers to accept payments, you need to connect your PayPal account. Alternative, you can disable online payments for now."
+          body: "Next, set up your marketplace for online payments! To allow your providers to accept payments, you need to connect your PayPal account. Alternatively, you can disable online payments for now."
           button: "Set up payments"
         listing:
           title: "Good job!"
